--- a/index.html
+++ b/index.html
@@ -10,30 +10,32 @@
 </head>
 
 <body>
-  <div id="home-header">
-    <h1>Kyle Griffin</h1>
-    <h3>Front-End Web Developer</h3>
-    <p>
-      Based in London
-    </p>
-  </div>
-  <div id="about-me">
-    <div class="one-half">
-      <div class="about-me-block">
-        <h3>I create websites</h3>
-        <p> Since I graduated in 2015, I have undertaken a serious interest in web development. I create web experiences that are intuitive, modern and powerful.
-        </p>
+  <div id="container">
+    <div id="home-header">
+      <h1>Kyle Griffin</h1>
+      <h3>Front-End Web Developer</h3>
+      <p>
+        Based in London
+      </p>
+    </div>
+    <div id="about-me">
+      <div class="one-half">
+        <div class="about-me-block">
+          <h3>I create websites</h3>
+          <p> Since I graduated in 2015, I have undertaken a serious interest in web development. I create web experiences that are intuitive, modern and powerful.
+          </p>
+        </div>
+      </div>
+      <div class="one-half">
+        <div class="dev-image"></div>
       </div>
     </div>
-    <div class="one-half">
-      <div class="dev-image"></div>
+    <div id="contact-me">
+      <h2>Interested?</h2>
+      <p>
+        <a class="kyleButton" href="mailto:kylefilegriffin@gmail.com">Drop me an email</a>
+      </p>
     </div>
-  </div>
-  <div id="contact-me">
-    <h2>Interested?</h2>
-    <p>
-      <a class="kyleButton" href="mailto:kylefilegriffin@gmail.com">Drop me an email</a>
-    </p>
   </div>
 </body>
 
