--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 </head>
 
 <body>
-  <div id="container">
-    <div id="home-header">
+
+  <div id="home-header">
+    <div id="home-header-inner">
       <h1>Kyle Griffin</h1>
       <h3>Front-End Web Developer</h3>
       <p>
         Based in London
       </p>
     </div>
+  </div>
+  <div id="container">
     <div id="about-me">
       <div class="one-half">
         <div class="about-me-block">
