Added google analytics
Want to have it added sooner than later.

--- a/index.html
+++ b/index.html
@@ -7,30 +7,61 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="style.css" rel="stylesheet" type="text/css">
   <title>Kyle Griffin - Web Developer</title>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-99582139-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 
 <body>
 
   <div id="home-header">
-    <div id="home-header-inner">
-      <h1>Kyle Griffin</h1>
-      <h3>Front-End Web Developer</h3>
-      <p>
-        Based in London
-      </p>
+    <div id="home-header-overlay">
+      <div id="home-header-inner">
+        <h1>Kyle Griffin</h1>
+        <h3>Front-End Web Developer</h3>
+        <p>
+          Based in London
+        </p>
+      </div>
     </div>
   </div>
   <div id="container">
     <div id="about-me">
-      <div class="one-half">
-        <div class="about-me-block">
-          <h3>I create websites</h3>
-          <p> Since I graduated in 2015, I have undertaken a serious interest in web development. I create web experiences that are intuitive, modern and powerful.
-          </p>
+      <h2>I create</h2>
+      <div id="card-row">
+
+
+        <div class="kyle-card">
+          <div class="kyle-card-header">
+            Websites
+          </div>
+          <div class="kyle-card-content">
+            Static or CMS; I have experience in delivering rich and optimised websites. Whether you are an independent entrepreneur or a small or large business, I work with you create a website that works for your requirements.
+          </div>
         </div>
-      </div>
-      <div class="one-half">
-        <div class="dev-image"></div>
+        <div class="kyle-card">
+          <div class="kyle-card-header">
+            Web Experiences
+          </div>
+          <div class="kyle-card-content">
+            What do you do? How can we convey your unique product to your audience? I deliver an experience that tells the story of your business to increase engagement and conversions.
+          </div>
+        </div>
+        <div class="kyle-card">
+          <div class="kyle-card-header">
+            User Experiences
+          </div>
+          <div class="kyle-card-content">
+            The power of the right call to action in the right place can mean the difference between a customer and a missed opportunity. I develop websites that engage and afford.
+          </div>
+        </div>
       </div>
     </div>
     <div id="contact-me">
