--- a/index.html
+++ b/index.html
@@ -6,61 +6,87 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="style.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Gentium+Basic:400,700|Open+Sans:300,400,700" rel="stylesheet">
   <title>Kyle Griffin - Web Developer</title>
   <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-99582139-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+    ga('create', 'UA-99582139-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
 
 <body>
-
+  <div id="navigation-bar">
+    <ul>
+      <li class="menu-item"><a href="#about-me" >About</a></li>
+      <li class="menu-item"><a href="#what-i-do">Services</a></li>
+      <li class="menu-item"><a href="#work">Work</a></li>
+      <li class="menu-item contact-item"><a href="#contact">Contact</a></li>
+    </ul>
+  </div>
   <div id="home-header">
     <div id="home-header-overlay">
       <div id="home-header-inner">
         <h1>Kyle Griffin</h1>
         <h3>Front-End Web Developer</h3>
-        <p>
-          Based in London
-        </p>
       </div>
     </div>
   </div>
   <div id="container">
     <div id="about-me">
-      <h2>I create</h2>
-      <div id="card-row">
-
-
-        <div class="kyle-card">
-          <div class="kyle-card-header">
+      <div id="about-me-container">
+        Hi. I am a front-end web developer based in London. I have over 3 years experience coding for the web. I also work for a digital marketing firm in the heart of London.
+      </div>
+    </div>
+    <div id="what-i-do">
+      <h2>Services</h2>
+      <div id="services-row">
+        <div class="service">
+          <svg fill="#000000" height="36" viewBox="0 0 24 24" width="36" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0 0h24v24H0V0z" fill="none"/>
+    <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
+</svg>
+          <h3>
             Websites
-          </div>
-          <div class="kyle-card-content">
-            Static or CMS; I have experience in delivering rich and optimised websites. Whether you are an independent entrepreneur or a small or large business, I work with you create a website that works for your requirements.
-          </div>
+          </h3>
+          <p>
+            Static or CMS; I work with you to deliver bespoke web experiences for your business.
+          </p>
         </div>
-        <div class="kyle-card">
-          <div class="kyle-card-header">
-            Web Experiences
-          </div>
-          <div class="kyle-card-content">
-            What do you do? How can we convey your unique product to your audience? I deliver an experience that tells the story of your business to increase engagement and conversions.
-          </div>
+        <div class="service">
+          <svg fill="#000000" height="36" viewBox="0 0 24 24" width="36" xmlns="http://www.w3.org/2000/svg">
+    <path clip-rule="evenodd" d="M0 0h24v24H0z" fill="none"/>
+    <path d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"/>
+</svg>
+          <h3>
+            Website Management
+          </h3>
+          <p>
+            I can host and manage your website's uptime and performance. I also offer site migrations, SSL and more.
+          <p>
         </div>
-        <div class="kyle-card">
-          <div class="kyle-card-header">
-            User Experiences
-          </div>
-          <div class="kyle-card-content">
-            The power of the right call to action in the right place can mean the difference between a customer and a missed opportunity. I develop websites that engage and afford.
-          </div>
+        <div class="service">
+          <svg fill="#000000" height="36" viewBox="0 0 24 24" width="36" xmlns="http://www.w3.org/2000/svg">
+    <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg>
+          <h3>
+            SEO
+          </h3>
+          <p>
+            Be found online. I work to an up-to-date technical specification to ensure your website brings traffic.
+          </p>
         </div>
       </div>
     </div>
