--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="bulma/css/bulma.css" rel="stylesheet" type="text/css">
+  <link href="bulma/css/bulma.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -50,86 +50,179 @@
       </div>
     </div>
   </div>
-  <div class="section">
-    <div class="container columns">
-      <div class="box is-half is-offset-one-quarter column">
-        <div class="media">
-          <div class="media-left">
-            <figure class="image is-128x128">
-              <img src="https://pbs.twimg.com/profile_images/852883733845880833/RwwDgfg3_400x400.jpg" alt="Kyle Griffin - Web Developer" />
-            </figure>
+  <!-- We're going to split the site in to one third and 2 thirds -->
+  <div class="main-container">
+
+    <div class="columns">
+      <!-- side profile that sticks to the page -->
+      <div class="column is-one-quarter">
+        <div class="box">
+          <div class="content has-text-centered kyle-image">
+              <img data-tilt src="https://pbs.twimg.com/profile_images/852883733845880833/RwwDgfg3_400x400.jpg" alt="Kyle Griffin - Front End Web Developer" />
           </div>
-          <div class="media-content">
-              <p>
-                I am a front-end web developer based in London.
-              </p>
-              <p>I have over 3 years experience coding for the web. I also work for <a href="https://sobold.co.uk" target="_blank">SoBold</a>, a digital marketing firm in the heart of London.</p>
-          </div>
-        </div>
-      </div>
-  </div>
-</div>
-    <div id="what-i-do">
-      <h2>Services</h2>
-      <div id="services-row" class="columns">
-        <div class="service column">
-          <svg fill="#000000" height="36" viewBox="0 0 24 24" width="36" xmlns="http://www.w3.org/2000/svg">
-    <path d="M0 0h24v24H0V0z" fill="none"/>
-    <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
-</svg>
-          <h3>
-            Websites
-          </h3>
-          <p>
-            Static or CMS; I work with you to deliver bespoke web experiences for your business.
-          </p>
-        </div>
-        <div class="service column">
-          <svg fill="#000000" height="36" viewBox="0 0 24 24" width="36" xmlns="http://www.w3.org/2000/svg">
-    <path clip-rule="evenodd" d="M0 0h24v24H0z" fill="none"/>
-    <path d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"/>
-</svg>
-          <h3>
-            Website Management
-          </h3>
-          <p>
-            I can host and manage your website's uptime and performance. I also offer site migrations, SSL and more.
+          <div class="content">
             <p>
+              I am a front-end web developer based in London.
+            </p>
+            <p>I have over 3 years experience coding for the web. I also work for <a href="https://sobold.co.uk" target="_blank">SoBold</a>, a digital marketing firm in the heart of London.</p>
+          </div>
         </div>
-        <div class="service column">
-          <svg fill="#000000" height="36" viewBox="0 0 24 24" width="36" xmlns="http://www.w3.org/2000/svg">
-    <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
-    <path d="M0 0h24v24H0z" fill="none"/>
-</svg>
-          <h3>
-            SEO
-          </h3>
-          <p>
-            Be found online. I work to an up-to-date technical specification to ensure your website brings traffic.
-          </p>
+      </div>
+      <!-- main column that has all the content -->
+      <div class="column is-three-quarters">
+        <div id="what-i-do" class="box">
+          <h2>Services</h2>
+          <div id="services-row" class="columns">
+            <div class="service column">
+              <svg fill="#000000" height="36" viewBox="0 0 24 24" width="36" xmlns="http://www.w3.org/2000/svg">
+        <path d="M0 0h24v24H0V0z" fill="none"/>
+        <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
+    </svg>
+              <h3>
+                Websites
+              </h3>
+              <p>
+                Static or CMS; I work with you to deliver bespoke web experiences for your business.
+              </p>
+            </div>
+            <div class="service column">
+              <svg fill="#000000" height="36" viewBox="0 0 24 24" width="36" xmlns="http://www.w3.org/2000/svg">
+        <path clip-rule="evenodd" d="M0 0h24v24H0z" fill="none"/>
+        <path d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"/>
+    </svg>
+              <h3>
+                Website Management
+              </h3>
+              <p>
+                I can host and manage your website's uptime and performance. I also offer site migrations, SSL and more.
+                <p>
+            </div>
+            <div class="service column">
+              <svg fill="#000000" height="36" viewBox="0 0 24 24" width="36" xmlns="http://www.w3.org/2000/svg">
+        <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+        <path d="M0 0h24v24H0z" fill="none"/>
+    </svg>
+              <h3>
+                SEO
+              </h3>
+              <p>
+                Be found online. I work to an up-to-date technical specification to ensure your website brings traffic.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div id="skills-wrapper" class="section box">
+          <h2>Skills</h2>
+          <br/>
+          <div id="skills-container" class"">
+            <!-- html5 box -->
+            <div data-tilt class="skills-box">
+              <div class="skill-column">
+                <div class="skill-header">
+                  <img src="/images/html5.png" alt="Html5" />
+                </div>
+                <div class="skill-bar">
+                  <div class="skill html5">
+                    <p>HTML5</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- css3 box -->
+            <div data-tilt class="skills-box">
+              <div class="skill-column">
+                <div class="skill-header">
+                  <img src="/images/css3.png" alt="CSS3" />
+                </div>
+                <div class="skill-bar">
+                  <div class="skill css">
+                    <p>CSS3</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Javascript box -->
+            <div data-tilt class="skills-box">
+              <div class="skill-column">
+                <div class="skill-header">
+                  <img src="/images/javascript.png" alt="JavaScript" />
+                </div>
+                <div class="skill-bar">
+                  <div class="skill javascript">
+                    <p>JavaScript</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- WordPress Box -->
+            <div data-tilt class="skills-box">
+              <div class="skill-column">
+                <div class="skill-header">
+                  <img src="/images/wordpress-logo.png" alt="WordPress Developer" />
+                </div>
+                <div class="skill-bar">
+                  <div class="skill wordpress">
+                    <p>WordPress</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Jquery box -->
+            <div data-tilt class="skills-box">
+              <div class="skill-column">
+                <div class="skill-header">
+                  <img src="/images/jquery.png" alt="jquery" />
+                </div>
+                <div class="skill-bar">
+                  <div class="skill jquery">
+                    <p>jQuery</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- php box -->
+            <div data-tilt class="skills-box">
+              <div class="skill-column">
+                <div class="skill-header">
+                  <img src="/images/php-logo.png" alt="php" />
+                </div>
+                <div class="skill-bar">
+                  <div class="skill jquery">
+                    <p>PHP</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div id="contact">
+    <!-- columns -->
+    <!-- contact container -->
+    <div id="contact" class="box">
       <div class="container">
-        <div class="section is-medium">
-      <h2 class="has-text-centered">Contact me</h2>
-      <br />
-      <div class="columns">
-        <div class="column has-text-centered">
-            <a href="mailto:kylefilegriffin@gmail.com"><i class="fa fa-envelope fa-3x"></i></a>
-        </div>
-        <div class="column has-text-centered">
-          <a href="https://twitter.com/kylefilegriffin" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
-        </div>
-        <div class="column has-text-centered">
-          <a href="https://www.linkedin.com/in/kylegriffin2" target="_blank"><i class="fa fa-linkedin fa-3x"></i></a>
+        <div class="">
+          <h2 class="has-text-centered">Contact me</h2>
+          <br />
+          <div class="columns">
+            <div class="column has-text-centered">
+              <a href="mailto:kylefilegriffin@gmail.com"><i class="fa fa-envelope fa-3x"></i></a>
+            </div>
+            <div class="column has-text-centered">
+              <a href="https://twitter.com/kylefilegriffin" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
+            </div>
+            <div class="column has-text-centered">
+              <a href="https://www.linkedin.com/in/kylegriffin2" target="_blank"><i class="fa fa-linkedin fa-3x"></i></a>
+            </div>
+          </div>
+
         </div>
       </div>
-
-    </div>
     </div>
   </div>
-</body>
+  <!-- container -->
 
+</body>
+<script src="/js/jquery-3.2.1.min.js"></script>
+<script src="/js/tilt.jquery.js"></script>
 </html>
