--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="css/style.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Quicksand:400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700|Raleway:400,700,900" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
   <title>Kyle Griffin - Front-End Web Developer</title>
@@ -31,8 +31,15 @@
 <body>
     <div id="first-section" class="section">
       <div class="vertical-center">
-        <h1 class="first-section-title">Kyle Griffin</h1>
+        <h1 class="first-section-title">KYLE GRIFFIN</h1>
           <h3 class="first-section-subtitle">Front-End Web Developer</h3>
+          <div class="short-seperator"></div>
+          <div class="links">
+            <a href="#">LinkedIn</a><span>/</span>
+            <a href="#">C.V.</a><span>/</span>
+            <a href="#">Contact</a>
+          </div>
+
       </div>
     </div>
     <div id="intro" class="section">
@@ -67,7 +74,7 @@
         <h2 class="section-header"> Work </h2>
         <h3> I have developed websites for small and large enterprises since <b>2015</b>.</h4>
           <!-- here I will add a grid of client work -->
-        <h3> I am currently working at <a href="https://sobold.co.uk" target="_blank" rel="nofollow">SoBold</a>.</h3>
+        <h3> I am currently working at <a class="underlined" href="https://sobold.co.uk" target="_blank" rel="nofollow">SoBold</a>.</h3>
       </div>
     </div>
     <div class="services">
@@ -75,7 +82,9 @@
     </div>
 
   </div>
-
+  <script id="__bs_script__">//<![CDATA[
+      document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.23.6'><\/script>".replace("HOST", location.hostname));
+  //]]></script>
 </body>
 <script src="/js/jquery-3.2.1.min.js"></script>
 
