--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 <body>
     <div id="first-section" class="section">
       <div class="vertical-center">
-        <h1 class="first-section-title">KYLE GRIFFIN</h1>
+        <h1 class="first-section-title">
+          KYLE GRIFFIN</h1>
           <h3 class="first-section-subtitle">Front-End Web Developer</h3>
           <div class="short-seperator"></div>
           <div class="links">
@@ -79,9 +80,51 @@
     <div id="work" class="section">
       <div class="work-inner">
         <h2 class="section-header"> Work </h2>
-        <h3> I have developed websites for small and large enterprises since <b>2015</b>.</h4>
-          <!-- here I will add a grid of client work -->
-        <h3> I am currently working at <a class="underlined" href="https://sobold.co.uk" target="_blank" rel="nofollow">SoBold</a>.</h3>
+        <h3> I have developed websites for small and large enterprises since <b>2015</b>.</h3>
+          <!-- may just white block this with drop shadow -->
+        <div class="work-inner-section">
+          <div class="work-inner-section-header">
+            <img src="./images/crucible-logo.png" alt="Crucible Creative">
+            <h2><a href="https://cruciblecreative.co.uk" target="_blank">Crucible Creative</a></h2>
+            <h3 class="work-section-date">May 2018 - Present</h3>
+          </div>
+          <p class="work-inner-strapline">Crucible helps companies transform their businesses through digital strategy,
+              exceptional user experience, digital design, and creative branded campaigns.</p>
+          <ul>
+              <li>Lead the development of bespoke websites for clients in the theatre, medical, fintech, recruitment sectors and more.</li>
+              <li>Delivered custom designed and programmed website functionality with a focus on continuous incremental improvement.</li>
+              <li>Acted as a technical consultant for projects worth over £100k.</li>
+          </ul>
+        </div>
+        <div class="work-inner-section">
+            <div class="work-inner-section-header">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_0_xA0_Image_1_" x="0px" y="0px" viewBox="0 0 164.1 231.1" style="enable-background:new 0 0 164.1 231.1;" xml:space="preserve">
+                  <g>
+                    <g>
+                      <path d="M131.3,113.4c-4.3-2.1-8.8-3.6-13.7-5.5c0.7-0.5,1.2-0.8,1.7-1.1c17.7-9.8,28.1-24.8,30.4-44.9    c2.5-21.6-4.8-39.1-23.2-51.4C114.8,2.7,101.4,0,87.3,0c-28.1,0-56.2,0-84.2,0C0.7,0,0,0.6,0,3.1c0.1,75,0.1,150,0.1,225    c0,0.9,0,1.9,0,3c1.1,0,1.8,0,2.5,0c32,0,64,0,96,0c3,0,6.1-0.2,9-0.6c29.2-4.5,52.5-27.8,56-57    C166.7,147.7,156.6,125.5,131.3,113.4z M44.7,185.6c-9.5,0-18.9,0-28.6,0h0c0-15,0-30,0-45.2h0c2.2,0,4.3,0,6.7,0    c0,13.1,0,25.9,0,39.1c7.3,0,14.5,0,21.9,0C44.7,181.8,44.7,183.6,44.7,185.6z M34.3,84.9c-6.1,0.3-12.3,0-18.4,0.1    c-1.5,0-2-0.6-2-2.1c0-13.9,0-27.7,0.1-41.6c0-0.7,1-2,1.5-2c6-0.1,12.1-0.3,18.1,0.1c5,0.3,9.2,2.4,11,7.5    c1.8,5.3,0.1,9.7-4.4,13.6c4.7,2.2,7.4,5.4,7.7,10.3C48.3,78.3,42.4,84.5,34.3,84.9z M98,175c-3.2,6.2-8.2,10.1-15.2,10.6    c-6.3,0.4-12.6,0.1-19.2,0.1c-0.1-1.2-0.1-2-0.1-2.9c0-13.2,0-26.4-0.1-39.7c0-2.3,0.5-3.2,2.9-3.1c4.7,0.2,9.4,0,14.1,0.1    c9.3,0.2,16.1,5.1,19,13.9C101.7,161.2,101.4,168.3,98,175z M99.6,71.1c-2.5,9.5-9.8,15-19.5,15c-9.7,0-16.9-5.5-19.5-15    c-1.6-5.8-1.7-11.6-0.1-17.4c2.7-10.1,10.2-15.8,20.2-15.5c10.2,0.3,17.6,6.7,19.5,17c0.4,2.3,0.6,4.7,0.9,7.6    C100.6,65.3,100.4,68.3,99.6,71.1z"/>
+                      <path d="M35.9,64.8c-1-0.4-2-0.8-3-0.9c-3.9-0.1-7.8,0-11.9,0c0,5.1,0,9.8,0,14.7c4.6,0,9,0.2,13.4-0.1c3.6-0.3,6.1-3,6.5-6.1    C41.3,69.1,39.4,66.2,35.9,64.8z"/>
+                      <path d="M32.5,57.4c1.7-0.2,3.7-1.4,4.9-2.7c2.9-3.2,1.3-8.4-2.9-8.9c-4.4-0.5-8.9-0.1-13.6-0.1c0,3.9,0,7.7,0,11.8    C25,57.5,28.8,57.8,32.5,57.4z"/>
+                    </g>
+                  </g>
+                </svg>
+            <h2><a href="https://sobold.co.uk" target="_blank">SoBold Digital</a></h2>
+            <h3 class="work-section-date">Feb 2016 - May 2018</h3>
+            </div>
+            <p class="work-inner-strapline">SoBold are a digital marketing agency, specialising in website effectiveness for small and large, local and global businesses. From creating new websites to making the most of existing ones, SoBold help you deliver on a cross-platform digital strategy to maximise your online presence.</p>
+            <ul>
+                <li>Created and managed bespoke responsive websites for clients in the finance, luxury, clinical and sport sectors.</li>
+                <li>Managed the development team to build and deliver technical end-user products.</li>
+                <li>Modified existing websites via JavaScript, PHP and CSS3 animations to improve KPIs</li>
+                <li>Driven strong marketing campaigns through UX focused, cross-platform HTML emails.</li>
+                <li>Provided consultations for clients to improve on-site SEO and complying with modern practices.</li>
+                <li>Adopted the role of senior developer to manage new hires and identified strong skills to maximise their performance at SoBold.</li>
+                <li>Communicated with SMEs during projects to improve quality of deliverables.  </li>
+                <li>Collaborated with the managing director on business development and client acquisition.</li>
+                <li>Developed reusable web components to aid design and development (css frameworks, javascript snippets and WordPress plugins) for use in projects.</li>
+                <li>Doubled the company’s year-on-year revenue in 2016 by extending the technical deliverables of SoBold. Transitioned all projects in-house and attributed my own efforts to ensure each project’s success.</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
     <div class="services">
