--- a/index.html
+++ b/index.html
@@ -126,12 +126,25 @@
           </div>
         </div>
       </div>
+    <div id="contact" class="section">
+      <div>
+        <h2 class="section-header">Contact me</h2>
+        <h3>I am available as a freelance contractor for your project.<br> 
+          Lets discuss your requirements and get a quote:</h3>
+          <form action="https://formspree.io/hello@kylegriffin.co.uk" method="POST">
+            <label>Name
+              <input type="text" name="name">
+            </label>
+            <label>Email
+                <input type="email" name="email">
+              </label>
+            <label>Message
+                  <textarea name="message"></textarea>
+            </label>
+            <input type="submit" value="Send">
+          </form>
+      </div>
     </div>
-    <div class="services">
-
-    </div>
-
-  </div>
   <script id="__bs_script__">//<![CDATA[
       document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.23.6'><\/script>".replace("HOST", location.hostname));
   //]]></script>
