Updated work history

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="short-seperator"></div>
           <div class="links">
             <a href="https://www.linkedin.com/in/kylegriffin2/" target="_blank">LinkedIn</a><span>/</span>
-            <a href="#">C.V.</a><span>/</span>
+            <a href="https://drive.google.com/file/d/1hUWicG051-n0cyZbqVpQq5bi_5CMtmL5/view?usp=sharing">C.V.</a><span>/</span>
             <a href="mailto:hello@kylegriffin.co.uk">Contact</a>
           </div>
           <div>
@@ -91,10 +91,28 @@
           <p class="work-inner-strapline">Crucible helps companies transform their businesses through digital strategy,
               exceptional user experience, digital design, and creative branded campaigns.</p>
           <ul>
-              <li>Lead the development of bespoke websites for clients in the theatre, medical, fintech, recruitment sectors and more.</li>
-              <li>Delivered custom designed and programmed website functionality with a focus on continuous incremental improvement.</li>
-              <li>Acted as a technical consultant for projects worth over £100k.</li>
+            <li ><span >Lead the development of bespoke websites for clients in the theatre, medical, fintech, recruitment sectors and more.</span></li>
+            <li ><span >Developed and optimised e-commerce websites in Woocommerce and Shopify.</span></li>
+            <li ><span >Built websites from the ground up using HTML5, CSS3, JavaScript (ES6), PHP7, SQL and more.</span></li>
+            <li ><span >Collaborated with remote teams to work on large and scalable projects built in React, Contentful CMS, AWS.</span></li>
+            <li ><span >Delivered custom designed and programmed website functionality with a focus on continuous incremental improvement. This includes SPAs, interactions, animations etc.</span></li>
+            <li ><span >Structured an efficient development cycle through task management tools, and collaborated with digital designers to produce websites with modern UX/UI. </span></li>
+            <li ><span >Lead bi-weekly standups with Crucible&rsquo;s designers and project managers to optimise the development workflow on a project by project basis.</span></li>
+            <li ><span >Driven strong marketing campaigns through UX focused, cross-platform HTML emails.</span></li>
+            <li ><span >Provided consultation for retainer contracts, site and server maintenance, refactoring, SEO.</span></li>
+            <li ><span >Acted as the sole technical consultant for projects worth over &pound;100k.</span></li>
           </ul>
+          <h3>Example sites I developed on behalf of Crucible Creative</h3>
+          <div class="site-examples">
+            <a href="https://anthesisgroup.com" target="_blank">Anthesis Group</a>
+            <a href="https://lantum.com" target="_blank">Lantum - Healthcare Recruitment Software</a>
+            <a href="https://agoramicrofinance.com" target="_blank">Agora Microfinance</a>
+            <a href="https://riotcommunications.com" target="_blank">Riot Communications</a>
+            <a href="https://avaloncorporate.events" target="_blank">Avalon Corporate Events</a>
+            <a href="https://freeword.org" target="_blank">Free Word Theatre</a>
+            <a href="https://powtheatre.co.uk" target="_blank">Pint of Wine Theatre</a>
+            <a href="https://cruciblecreative.co.uk" target="_blank">Crucible Creative</a>
+          </div>
         </div>
         <div class="work-inner-section">
             <div class="work-inner-section-header">
@@ -123,14 +141,19 @@
                 <li>Developed reusable web components to aid design and development (css frameworks, javascript snippets and WordPress plugins) for use in projects.</li>
                 <li>Doubled the company’s year-on-year revenue in 2016 by extending the technical deliverables of SoBold. Transitioned all projects in-house and attributed my own efforts to ensure each project’s success.</li>
             </ul>
+            <h3>Example sites I developed on behalf of Sobold Group</h3>
+          <div class="site-examples">
+            <a href="https://videobrochuresmarketing.com" target="_blank">Video Brochure Marketing</a>
+            <a href="https://thefitnessmosaic.com" target="_blank">The Fitness Mosaic</a>
+            <a href="https://clanwilliamgroup.com" target="_blank">Clanwilliam Group</a>
+            <a href="https://tiebreaktens.com" target="_blank">Tie Break Tens</a>
+          </div>
           </div>
         </div>
       </div>
     <div id="contact" class="section">
       <div>
-        <h2 class="section-header">Contact me</h2>
-        <h3>I am available as a freelance contractor for your project.<br> 
-          Lets discuss your requirements and get a quote:</h3>
+        <h2 class="section-header">Enquiries and General Contact</h2>
           <form action="https://formspree.io/hello@kylegriffin.co.uk" method="POST">
             <label>Name
               <input type="text" name="name">
