Update crucible link

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <div class="work-inner-section-header">
             <img src="./images/crucible-logo.png" alt="Crucible Creative" />
             <h2>
-              <a href="https://cruciblecreative.co.uk" target="_blank"
+              <a href="https://crucible.io" target="_blank"
                 >Crucible Creative</a
               >
             </h2>
