--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
     <div id="contact" class="section">
       <div>
         <h2 class="section-header">Enquiries and General Contact</h2>
+        <p>I am available for consultation and projects. Drop me a message below!</p>
         <form
           action="https://formspree.io/hello@kylegriffin.co.uk"
           method="POST"
