Update Job Info

--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
             >LinkedIn</a
           ><span>/</span>
           <a
-            href="https://drive.google.com/file/d/1hUWicG051-n0cyZbqVpQq5bi_5CMtmL5/view?usp=sharing"
-            >C.V.</a
+            href="https://github.com/Kyle-Griffin"
+            target="_blank"
+            >GitHub</a
           ><span>/</span>
           <a href="mailto:hello@kylegriffin.co.uk">Contact</a>
         </div>
@@ -173,13 +174,23 @@
             The White Company is a worldwide retail brand based in the UK since 1994, offering luxury products for home and occasion. Their inspiration 
             for timeless style and attention to detail is reflected in their predominantly white colour palette. 
             <ul>
-              <li><span>Developing SPAs and new features in the Vue.js framework</span></li>
-              <li><span>Integration of frontend into SAP Hybris E-commerce software and Amplience CMS through implementation of 2-way APIs</span></li>
-              <li><span>As part of the Continuous Improvement, Architechture and Checkout projects, developing new features
-                to keep The White Company ahead of it's competitors in the Luxury retail space.
-              </span></li>
-              <li><span>Working with a diverse and progressive team(s) of project managers, line managers, technical leads, business analysts, backend engineers, testers and many more.
-              </span></li>
+              <li><span>Developed and tested new features in Vue.js for The White Company website
+                experience across multiple projects and teams, in-house and remote.</span></li>
+              <li><span>Collaborated in an Agile workflow with cross-functional teams, including UX/UI
+                designers, backend developers, test analysts, business analysts, project managers,
+                release management, and key stakeholders throughout the software development
+                lifecycle.</span></li>
+              <li><span>Delivered on projects to increase YoY revenue of over 2% globally.</span></li>
+              <li><span>Performance auditing and refactoring of codebase, reducing total size by 25%.</span></li>
+              <li><span>Mentored and onboarded new developers and staff.</span></li>
+              <li><span>Written high level solution design documents for upcoming projects, as well as
+                documentation of existing features.</span></li>
+              <li><span>Assuming responsibility of project deliverables, leading technical discussions with
+                non-technical personnel, assisting the project managers with ticketing and breakdown of
+                the technical solution towards a deadline-driven agile paradigm.</span></li>
+              <li><span>Led the cross-project implementation of eWallet payment methods (ApplePay, PayPal)
+                across the cart and checkout user journey, resulting in a 10% improvement in order
+                completion rates across thousands of monthly orders in the UK, US, and globally.</span></li>
             </ul>
           </p>
         </div>
