Update google analytics script

--- a/index.html
+++ b/index.html
@@ -79,29 +79,14 @@
       content="rKCLwQOLWWI6luyZPIKXcXHlyASFsuCeTKLBkiAVwk0"
     />
     <title>Kyle Griffin - Front-End Web Developer</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RGPTKB86LB"></script>
     <script>
-      (function (i, s, o, g, r, a, m) {
-        i["GoogleAnalyticsObject"] = r;
-        (i[r] =
-          i[r] ||
-          function () {
-            (i[r].q = i[r].q || []).push(arguments);
-          }),
-          (i[r].l = 1 * new Date());
-        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m);
-      })(
-        window,
-        document,
-        "script",
-        "https://www.google-analytics.com/analytics.js",
-        "ga"
-      );
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-      ga("create", "UA-99582139-1", "auto");
-      ga("send", "pageview");
+      gtag('config', 'G-RGPTKB86LB');
     </script>
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script> 
   </head>
